PaymentHandler: Not allow to call operation if event is not trusted

Related spec change:
  https://github.com/w3c/payment-handler/pull/294

Bug: 833530
Change-Id: I65d0e01bb5b6bfdd44925b90ba98837161cc136b
Reviewed-on: https://chromium-review.googlesource.com/1013664
Reviewed-by: Rouslan Solomakhin <rouslan@chromium.org>
Commit-Queue: Jinho Bang <jinho.bang@samsung.com>
Cr-Commit-Position: refs/heads/master@{#551238}
Former-commit-id: 8ac00d0744f66886dcd0dec7e6f89993d303c4bf